--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#"></a>
         
         <!-- inicio -->
-        <a href="#"><p>Inicio</p></a>
+        <a href="#">Inicio</a>
         
         <!-- sobre mim -->
         <a href="#">Sobre Mim</a>
