--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Portifolio</title>
 </head>
 <body>
+    <!-- Barra de navegação -->
     <nav>
         <ul>
         
@@ -32,6 +33,19 @@
         </ul>
 
     </nav>
+
+    <!-- Corpo do Portfolio -->
+    <main>
+        <!-- parte 1 - sobre -->
+        <section class="MainInfo">
+            <h1 class="title">
+                Olá, Me Chamo<br>
+                <span class="write">Pedro Costa</span>
+            </h1>
+
+            <img src="src/circle-overlap-1.png" alt="Circulo desenhado, para fundo da imagem" class="imgBackFoto">
+        </section>
+    </main>
     
 </body>
 </html>
