--- a/index.html
+++ b/index.html
@@ -61,31 +61,37 @@
         <!---------------------------------------------------------------->
         <!-- Linguagens -->
 
-        <div class="container">
+        <div class="container" id="language">
 
             <!-- titulo -->
-            <h2 id="language">Linguagens</h2>
+            <h2>Linguagens</h2>
             
             <!-- Fileira 1 -->
             <ul>
                 <li>
                     <div class="card">
                         <img src="src/cssLogo.png" alt="Logo da Linguagem de Marcação, CSS">
-                        <h3></h3>
+                        <h3 class="percentage">
+                            Usei CSS em 90% dos Projetos
+                        </h3>
                     </div>
                 </li>
 
                 <li>
                     <div class="card">
                         <img src="src/htmlLogo.png" alt="Logo da Linguagem de Marcação, HTML">
-                        <h3></h3>
+                        <h3 class="percentage">
+                            Taxa de Uso <span> 90%</span> 
+                        </h3>
                     </div>
                 </li>
 
                 <li>
                     <div class="card">
                         <img src="src/phpLogo.png" alt="Logo da Linguagem de Programação, PHP">
-                        <h3></h3>
+                        <h3 class="percentage">
+                            Usei PHP em <span>90%</span> dos Projetos
+                        </h3>
                     </div>
                 </li>
 
@@ -93,25 +99,58 @@
 
                 <li>
                     <div class="card">
-                        <img src="src/mysqlLogo.png" alt="Logo da Linguagem de Marcação, CSS">
-                        <h3></h3>
+                        <img src="src/mysqlLogo.png" alt="Logo da Linguagem de Programação, MySQL">
+                        <h3 class="percentage">
+                            Usei MySQL em <span></span> dos Projetos
+                        </h3>
                     </div>
                 </li>
 
                 <li>
                     <div class="card">
-                        <img src="src/javascriptLogo.png" alt="Logo da Linguagem de Marcação, HTML">
-                        <h3></h3>
+                        <img src="src/javascriptLogo.png" alt="Logo da Linguagem de Programação, javaScript">
+                        <h3 class="percentage">
+                            Usei javaScript em <span>90%</span> dos Projetos
+                        </h3>
                     </div>
                 </li>
 
                 <li>
                     <div class="card">
-                        <img src="src/cplusplusLogo.png" alt="Logo da Linguagem de Programação, PHP">
-                        <h3></h3>
+                        <img src="src/cplusplusLogo.png" alt="Logo da Linguagem de Programação, C++">
+                        <h3 class="percentage">
+                            Usei C++ em <span>90%</span> dos Projetos
+                        </h3>
                     </div>
                 </li>
             </ul>
+
+
+            <!---->
+            <!-- Ferramentas -->
+
+            <div class="logos">
+
+                <h3 class="itensTitle">
+                    Ferramentas de Apoio
+                </h3>
+
+                <div class="logos-slider">
+                    <img src="src/ferramentas/apache.png" alt="Logo da ferramenta Apache">
+                    <img src="src/ferramentas/bootstrap.png" alt="Logo da ferramenta bootstrap">
+                    <img src="src/ferramentas/canva.png" alt="Logo da ferramenta Canva">
+                    <img src="src/ferramentas/figma.png" alt="Logo da ferramenta Figma">
+                    <img src="src/ferramentas/flowgo.png" alt="Logo da ferramenta Flowgorithm">
+                    <img src="src/ferramentas/github.png" alt="Logo da ferramenta Github">
+                    <img src="src/ferramentas/netlify.png" alt="Logo da ferramenta Netlify">
+                    <img src="src/ferramentas/node.png" alt="Logo da ferramenta Node">
+                    <img src="ferramentas/react.png" alt="Logo da ferramenta React">
+                    <img src="ferramentas/vercel.png" alt="Logo da ferramenta Vercel">
+
+                </div>
+            
+            </div>
+
         </div>
 
 
