--- a/index.html
+++ b/index.html
@@ -45,16 +45,27 @@
         <!-- Sobre -->
 
         <section id="about">
+
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+
             <ul>
+
                 <li>
+
                     <h1>
                         Me Chamo <br>
                         <span>Pedro Mitsuaki</span>
                     </h1>
                     <p>Sou desenvolvedor FullStack, gosto de tecnologia e de aplicar novas ideais</p>
+
                 </li>
+
                 <li><img src="src/circle-overlap-1.png" alt="Circulo branco desenhado "></li>
+
             </ul>
+
         </section>
 
 
@@ -72,7 +83,7 @@
                     <div class="card">
                         <img src="src/cssLogo.png" alt="Logo da Linguagem de Marcação, CSS">
                         <h3 class="percentage">
-                            Usei CSS em 90% dos Projetos
+                            Taxa de Uso 90%
                         </h3>
                     </div>
                 </li>
@@ -81,7 +92,7 @@
                     <div class="card">
                         <img src="src/htmlLogo.png" alt="Logo da Linguagem de Marcação, HTML">
                         <h3 class="percentage">
-                            Taxa de Uso <span> 90%</span> 
+                            Taxa de Uso 90% 
                         </h3>
                     </div>
                 </li>
@@ -90,7 +101,7 @@
                     <div class="card">
                         <img src="src/phpLogo.png" alt="Logo da Linguagem de Programação, PHP">
                         <h3 class="percentage">
-                            Usei PHP em <span>90%</span> dos Projetos
+                            Taxa de Uso 40%                         
                         </h3>
                     </div>
                 </li>
@@ -101,7 +112,7 @@
                     <div class="card">
                         <img src="src/mysqlLogo.png" alt="Logo da Linguagem de Programação, MySQL">
                         <h3 class="percentage">
-                            Usei MySQL em <span></span> dos Projetos
+                            Taxa de Uso 37%
                         </h3>
                     </div>
                 </li>
@@ -110,7 +121,7 @@
                     <div class="card">
                         <img src="src/javascriptLogo.png" alt="Logo da Linguagem de Programação, javaScript">
                         <h3 class="percentage">
-                            Usei javaScript em <span>90%</span> dos Projetos
+                            Taxa de Uso 35%
                         </h3>
                     </div>
                 </li>
@@ -119,7 +130,7 @@
                     <div class="card">
                         <img src="src/cplusplusLogo.png" alt="Logo da Linguagem de Programação, C++">
                         <h3 class="percentage">
-                            Usei C++ em <span>90%</span> dos Projetos
+                            Taxa de Uso 10%
                         </h3>
                     </div>
                 </li>
