--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </ul>
 
 
-            <!---->
+            <!---------------------------------------------------------------->
             <!-- Ferramentas -->
 
             <div class="logos">
@@ -155,8 +155,8 @@
                     <img src="src/ferramentas/github.png" alt="Logo da ferramenta Github">
                     <img src="src/ferramentas/netlify.png" alt="Logo da ferramenta Netlify">
                     <img src="src/ferramentas/node.png" alt="Logo da ferramenta Node">
-                    <img src="ferramentas/react.png" alt="Logo da ferramenta React">
-                    <img src="ferramentas/vercel.png" alt="Logo da ferramenta Vercel">
+                    <img src="src/ferramentas/react.png" alt="Logo da ferramenta React">
+                    <img src="src/ferramentas/vercel.png" alt="Logo da ferramenta Vercel">
 
                 </div>
             
@@ -168,8 +168,9 @@
         <!---------------------------------------------------------------->
         <!-- Projetos -->
 
-        <section class="">
-            <!-- Projeto 1 -->
+        <!-- <section class="">
+
+            Projeto 1
             <div class="projeto">
                 <div class="legenda">
                     <span></span>
@@ -181,8 +182,7 @@
             </div>
 
 
-            <!-- Projeto 2 -->
-
+            Projeto 2
             <div class="projeto">
                 <div class="legenda">
                     <span></span>
@@ -194,8 +194,7 @@
             </div>
 
 
-            <!-- Projeto 3 -->
-
+            Projeto 3
             <div class="projeto">
                 <div class="legenda">
                     <span></span>
@@ -205,7 +204,7 @@
                     <img src="" alt="">
                 </div>
             </div>
-        </section>
+        </section> -->
 
     </main>
     
