--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 
             </ul>
 
+            <div></div>
+
         </section>
 
 
@@ -80,7 +82,7 @@
             <!-- Fileira 1 -->
             <ul>
                 <li>
-                    <div class="card">
+                    <div class="card linguagem">
                         <img src="src/cssLogo.png" alt="Logo da Linguagem de Marcação, CSS">
                         <h3 class="percentage">
                             Taxa de Uso 90%
@@ -89,7 +91,7 @@
                 </li>
 
                 <li>
-                    <div class="card">
+                    <div class="card linguagem">
                         <img src="src/htmlLogo.png" alt="Logo da Linguagem de Marcação, HTML">
                         <h3 class="percentage">
                             Taxa de Uso 90% 
@@ -97,8 +99,8 @@
                     </div>
                 </li>
 
-                <li>
-                    <div class="card">
+                <li> 
+                    <div class="card linguagem">
                         <img src="src/phpLogo.png" alt="Logo da Linguagem de Programação, PHP">
                         <h3 class="percentage">
                             Taxa de Uso 40%                         
@@ -109,7 +111,7 @@
                 <!-- Fileira 2 -->
 
                 <li>
-                    <div class="card">
+                    <div class="card linguagem">
                         <img src="src/mysqlLogo.png" alt="Logo da Linguagem de Programação, MySQL">
                         <h3 class="percentage">
                             Taxa de Uso 37%
@@ -118,7 +120,7 @@
                 </li>
 
                 <li>
-                    <div class="card">
+                    <div class="card linguagem">
                         <img src="src/javascriptLogo.png" alt="Logo da Linguagem de Programação, javaScript">
                         <h3 class="percentage">
                             Taxa de Uso 35%
@@ -127,7 +129,7 @@
                 </li>
 
                 <li>
-                    <div class="card">
+                    <div class="card linguagem">
                         <img src="src/cplusplusLogo.png" alt="Logo da Linguagem de Programação, C++">
                         <h3 class="percentage">
                             Taxa de Uso 10%
@@ -168,43 +170,56 @@
         <!---------------------------------------------------------------->
         <!-- Projetos -->
 
-        <!-- <section class="">
+        <h1 class="h1" id="titulo"> Meus Projetos</h1>
 
-            Projeto 1
-            <div class="projeto">
-                <div class="legenda">
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="imagem">
-                    <img src="" alt="">
-                </div>
+
+        <div class="wrapper" id="proj">
+            <section class = "poject">
+                <input type="radio" name="slide" id="c1" checked>
+                <label for="c1" class="card projetos">
+                    <div class="row">
+                        <div class="icon">1</div>
+                        <div class="description">
+                            <h4>Winter</h4>
+                            <p>Winter has so much to offer -
+                            creative activities</p>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c2" >
+                <label for="c2" class="card projetos">
+                    <div class="row">
+                        <div class="icon">2</div>
+                        <div class="description">
+                            <h4>Digital Technology</h4>
+                            <p>Gets better every day -
+                            stay tuned</p>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c3" >
+                <label for="c3" class="card projetos">
+                    <div class="row">
+                        <div class="icon">3</div>
+                        <div class="description">
+                            <h4>Globalization</h4>
+                            <p>Help people all over the world</p>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c4" >
+                <label for="c4" class="card projetos">
+                    <div class="row">
+                        <div class="icon">4</div>
+                        <div class="description">
+                            <h4>New technologies</h4>
+                            <p>Space engineering becomes
+                            more and more advanced</p>
+                        </div>
+                    </div>
+                </label>
             </div>
-
-
-            Projeto 2
-            <div class="projeto">
-                <div class="legenda">
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="imagem">
-                    <img src="" alt="">
-                </div>
-            </div>
-
-
-            Projeto 3
-            <div class="projeto">
-                <div class="legenda">
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="imagem">
-                    <img src="" alt="">
-                </div>
-            </div>
-        </section> -->
+        </section>
 
     </main>
     
