--- a/index.html
+++ b/index.html
@@ -173,16 +173,15 @@
         <h1 class="h1" id="titulo"> Meus Projetos</h1>
 
 
-        <div class="wrapper" id="proj">
+        <div class="wrapper">
             <section class = "poject">
                 <input type="radio" name="slide" id="c1" checked>
                 <label for="c1" class="card projetos">
                     <div class="row">
                         <div class="icon">1</div>
                         <div class="description">
-                            <h4>Winter</h4>
-                            <p>Winter has so much to offer -
-                            creative activities</p>
+                            <h4>Crescendia</h4>
+                            <p>O é um site de música com cadastro funcional</p>
                         </div>
                     </div>
                 </label>
@@ -218,8 +217,8 @@
                         </div>
                     </div>
                 </label>
-            </div>
-        </section>
+            </section>
+        </div>
 
     </main>
     
